[package]
name = "vfs_service"
version = "0.0.1"
authors = ["Drake Talley robertdraketalley@gmail.com"]
edition = "2018"
description = "Build data services and expose them as a vfs"
license = "MIT"
homepage = "https://github.com/Axylos/vfs_service"
repository = "https://github.com/Axylos/vfs_service"
keywords = ["fuse", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "file_node",
  "file_store",
]

[dependencies]
fuse = "0.3.1"
reqwest = "0.9.19"
log = "0.4.4"
syslog = "4.0.1"
time = "0.1.38"
libc = "0.2.60"
serde_json = "0.9.0"
serde = "1.0.98"
dotenv = "0.14.1" 

[dependencies.file_node]
version = "0.0.1"
path = "./file_node"

[dependencies.file_store]
version = "0.0.1"
path = "./file_store"

